fix(scss): improve wrapping of navigation bar

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   line-height: 1;
-  margin: 0 1em 1em;
+  margin: 0 0.5em 1em;
   text-align: center;
 
   .logo {
@@ -20,18 +20,19 @@
   nav {
     @extend %content;
     font-family: $navfontfamily;
+    flex-flow: row wrap;
     margin: 0;
 
     ul {
       list-style: none;
       padding: 0 1em;
-
     }
 
     li {
-      display: inline;
+      display: inline-block;
       margin: 0;
-      padding: 0;
+      padding: .5em;
+      white-space: nowrap;
 
       &:not(:first-child) {
         margin-left: 1em;
